--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Lara(b)log2
+APP_NAME="Dota Underlord"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:O4sa1kJcO1UGtwBRjIw9RsUxhD8GDFEal7HMn0jvVLc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=larablog
+DB_USERNAME=root
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -44,16 +44,16 @@ INITIAL_SEEDED_SUPER_ADMIN_USERPASSWORD='password'
 
 BLOG_APP_NAME="${APP_NAME}"
 BLOG_DEFAULT_TITLE='Lara(b)log2'
-BLOG_DEFAULT_SUBTITLE='An open source blog platform'
+BLOG_DEFAULT_SUBTITLE='A Blog about Dota Underlord'
 BLOG_DEFAULT_DESCRIPTION='Larablog 2 is an open source blog built on Laravel'
 BLOG_DEFAULT_AUTHOR='Jeremy Kenedy'
 BLOG_SITEMAP_LIMIT=100
 
-BLOG_DEFAULT_IMAGE='https://picsum.photos/1600/900/?random'
-BLOG_HOME_IMAGE='https://source.unsplash.com/random/1600x900'
+BLOG_DEFAULT_IMAGE='/images/custom/dota_underlord_default_image.jpg'
+BLOG_HOME_IMAGE='/images/custom/dota_underlord_default_image.jpg'
 BLOG_AUTHORS_IMAGE='https://loremflickr.com/1600/900'
 BLOG_AUTHOR_IMAGE='https://baconmockup.com/1600/900'
-BLOG_CONTACT_IMAGE='https://source.unsplash.com/random/1600x900'
+BLOG_CONTACT_IMAGE='/images/custom/dota_underlord_default_image.jpg'
 
 BLOG_SM_URL_TWITTER=https://twitter.com
 BLOG_SM_URL_FACEBOOK=https://www.facebook.com
